# Moire

./: CMakeLists.txt  README  compile.sh
app/cfg/: 1d_toymodel.in  tblg_hstruct.in  twisted_blg.in
app/src/: CMakeLists.txt  main.cpp
cmake/module/: FindFFTW.cmake  FindMETIS.cmake  FindMPI.cmake
examples/tblg/: tblg_hstruct.in
julia_post/: ConductivityScanPP.jl  DoSPP.jl  DoSScanPP.jl  LDoSPP.jl  TB1.jl
src/: CMakeLists.txt
src/bilayer/: base_algebra.cpp  base_algebra.h  basealgebra.h  bilayer.h  blockdata.h  compute_conductivity.cpp  compute_conductivity.h  compute_dos.cpp  compute_dos.h  compute_resolvent.cpp  compute_resolvent.h  computedos.h  dof_handler.cpp  dof_handler.h  dofhandler.h  hamiltonian.h  multivector.cpp  multivector.h  observable.h  operator.cpp  operator.h  point_data.cpp  point_data.h  pointdata.h  scalarprod.cpp  scalarprod.h  vector.cpp  vector.h  vectorspace.cpp  vectorspace.h
src/couplings/: interlayer_coupling.cpp  interlayer_coupling.h  interlayer_coupling_test.cpp  intralayer_coupling.cpp  intralayer_coupling.h
src/fe/: element.cpp  element.h  triangulation.h
src/geometry/: bilayer.h  lattice.cpp  lattice.h  monolayer.h  unit_cell.cpp  unit_cell.h  unitcell.h
src/materials/: 1d_model.cpp  1d_model.h  TMDC.cpp  TMDC.h  graphene.cpp  graphene.h  materials.cpp  materials.h  strained_graphene.cpp  strained_graphene.h
src/monolayer/: dof_handler.h  dofhandler.h  monolayer.h
src/parameters/: layer_data.cpp  layer_data.h  layerdata.h  multilayer.cpp  multilayer.h
src/tools/: grid_to_index_map.cpp  grid_to_index_map.h  mpi_reduce.h  numbers.h  periodic_translation_unit.cpp  periodic_translation_unit.h  transformation.h  types.h
tests/: CMakeLists.txt  bilayer.print_sparsity_patterns.cpp  bilayer.test_H_sym.cpp  bilayer.test_rotation_invariance.cpp  bilayer.test_thyra_operators.cpp  bilayer.test_thyra_vectors.cpp  materials.1d_toy_model.cpp  materials.graphene.cpp  run.cmake  tests.h  tools.periodic_translation.cpp
